--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-select": "^5.10.1",
     "react-table": "^7.8.0",
-    "react-toastify": "^11.0.3",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "react-virtualized-auto-sizer": "^1.0.25",
     "react-window": "^1.8.11",
