feat: Update package dependencies, add Notes component with JoditEditor for rich text input, and integrate notes functionality in ProjectStatus

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@material-tailwind/react": "^2.1.9",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@reduxjs/toolkit": "^2.2.7",
@@ -23,7 +23,10 @@
     "country-codes-flags-phone-codes": "^1.1.1",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.4.7",
+    "html-to-text": "^9.0.5",
     "https": "^1.0.0",
+    "jodit": "^4.6.2",
+    "jodit-react": "^5.2.19",
     "lucide-react": "^0.475.0",
     "luxon": "^3.6.1",
     "react": "^18.3.1",
