--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@preact/signals-react": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
