--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "https": "^1.0.0",
     "jodit": "^4.6.2",
     "jodit-react": "^5.2.19",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.475.0",
     "luxon": "^3.6.1",
     "react": "^18.3.1",
