--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.475.0",
     "luxon": "^3.6.1",
     "react": "^18.3.1",
+    "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
