--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "luxon": "^3.6.1",
+    "num-words": "^1.2.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
