--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.1.1",
     "@preact/signals-react": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-table": "^8.21.3",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.7.7",
